--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -11,7 +11,7 @@ jobs:
                   node-version: 16.x
             - run: npm ci
             - run: npm run build
-            - run: npm test
+            - run: npm run lint
             - name: Zip output
               uses: papeloto/action-zip@v1
               with:
